kubernetes/clusters/homelab/apps/anki-sync-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anki-sync-server
  namespace: anki-sync-server
  labels:
    app.kubernetes.io/name: anki-sync-server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: anki-sync-server
