kubernetes/clusters/homelab/apps/anki-sync-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anki-sync-server
  namespace: anki-sync-server
spec:
  ingressClassName: infra-traefik
  rules:
    - host: anki.lab.hddq.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anki-sync-server
                port:
                  number: 8080
